--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -995,6 +995,7 @@
     <string name="halo_floating_notifications_title">Use Floating Mode</string>
     <string name="halo_floating_notifications_summary">Always launch activities from notifications in Float Mode.</string>
     <string name="halo_enable_float_summary">Enable floating mode first.</string>
+    <string name="halo_disabled_info">You need to enable Halo to get all the options</string>
 
     <string name="halo_size_title">Halo size</string>
     <string name="halo_size_summary">Defines how big Halo is going to be</string>
