--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1019,6 +1019,7 @@
     <string name="halo_msgbox_animation_flip">Flip</string>
 
     <!-- Blur UI -->
+    <string name="nav_blur_ui_title">Blur UI</string>
     <string name="blur_ui_category_title">Blur personalizations</string>
     <string name="blurred_status_bar_expanded_enabled_pref">Blur StatusBar Background</string>
     <string name="blurred_status_bar_expanded_enabled_pref_summary">Blur the background when you pull down the status bar</string>
