Blur: edit notice, stroke and logo are working now
Change-Id: I9c211d6270b1ec38e2db0cd89c638f071aade972

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1039,6 +1039,6 @@
     <string name="blurred_radius">Blur Radius</string>
     <string name="blurred_radius_summary">Amount of blur</string>
     <string name="blur_cat_notice">Notice</string>
-    <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled! QS header and panel transparency, stroke and logo are automatically disabled!</string>
+    <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled! QS header and panel transparency are automatically disabled!</string>
 
 </resources>
