--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1024,21 +1024,21 @@
     <string name="blurred_status_bar_expanded_enabled_pref">Blur StatusBar Background</string>
     <string name="blurred_status_bar_expanded_enabled_pref_summary">Blur the background when you pull down the status bar</string>
     <string name="translucent_notifications_pref">Translucent Notifications</string>
-    <string name="translucent_notifications_pref_summary">Set the background of notifications translucent</string>
+    <string name="translucent_notifications_pref_summary">Allow translucency of notifications' background</string>
     <string name="translucent_header_pref">Blurred Status Bar Header </string>
     <string name="translucent_header_pref_summary">Blur the background of status bar header</string>
-    <string name="translucent_quick_settings_pref">Blurred Expanded StatusBar</string>
-    <string name="translucent_quick_settings_pref_summary">Blur the background of qs panel </string>
-    <string name="transluency_level_universal">Transluency level</string>
+    <string name="translucent_quick_settings_pref">Blurred QS Panel</string>
+    <string name="translucent_quick_settings_pref_summary">Blur the background of QS panel </string>
+    <string name="transluency_level_universal">Translucency level</string>
     <string name="blur_expstatus_cat">Expanded StatusBar </string>
     <string name="blur_notifications_cat">Notifications</string>
     <string name="blur_header_cat">StatusBar Header</string>
     <string name="blur_qs_cat">Quick Settings</string>
     <string name="blurred_scale">Blur Scale</string>
-    <string name="blurred_scale_summary">Quailty of blur image</string>
+    <string name="blurred_scale_summary">Quality of blur image</string>
     <string name="blurred_radius">Blur Radius</string>
     <string name="blurred_radius_summary">Amount of blur</string>
     <string name="blur_cat_notice">Notice</string>
-    <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled! QS header and panel transparency are automatically disabled!</string>
+    <string name="blur_cat_notice_summary">Blur personalizations are disabled during Keyguard view! Only Translucent Notifications are enabled! QS header and panel transparency are automatically disabled!</string>
 
 </resources>
