AE: Show 4G instead of LTE switch [2/2]
AICPfy:
Include this patch:
https://github.com/cphelps76/packages_apps_Settings/commit/218fbed8e571ea8ae91ed3e02dab06ed73dbedac

Change-Id: Ic4285bc3a71f969928356995723c76cb8e815aa1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1044,4 +1044,8 @@
     <string name="blur_cat_notice">Notice</string>
     <string name="blur_cat_notice_summary">Blur personalizations are disabled during Keyguard view! Only Translucent Notifications are enabled! QS header and panel transparency are automatically disabled!</string>
 
+    <!-- Statusbar 4G LTE switch -->
+    <string name="show_fourg_title">Show 4G instead of LTE</string>
+    <string name="show_fourg_summary">Replaces LTE statusbar indicator with 4G</string>
+
 </resources>
