AE: Show/hide zen icon in statusbar (2/2)
Change-Id: I124d5ab7842ac4b99370160c2c82a6c26d0447be

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1048,4 +1048,8 @@
     <string name="show_fourg_title">Show 4G instead of LTE</string>
     <string name="show_fourg_summary">Replaces LTE statusbar indicator with 4G</string>
 
+    <!-- Zen icon in statusbar -->
+    <string name="show_zen_icon_title">Zen icon</string>
+    <string name="show_zen_icon_summary">Show/hide priority icon in statusbar.</string>
+
 </resources>
