Updated missing DE-strings
Change-Id: I0f8c34b325e8ef3fdb670b610b5f8352b5af67c4
Signed-off-by: Ralf Luther <luther.ralf@gmail.com>

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -959,7 +959,7 @@
     <string name="boot_dialog_test_message">Anwendungen werden optimiert...</string>
     <string name="boot_dialog_custom_title">Eigene Überschrift</string>
     <string name="boot_dialog_custom_title_notset">Zur Zeit keine eigene Überschrift eingegeben</string>
-    <string name="boot_dialog_custom_explain">Please enter a new label. Leave blank to revert to stock label.</string>
+    <string name="boot_dialog_custom_explain">Bitte eine neue Überschrift eingeben. Nichts eingeben, um zur Voreinstellung zurückzukehren.</string>
     <string name="boot_dialog_starting">wird gestartet\u2026</string>
     <string name="boot_dialog_title_color_title">Farbe des Überschrift</string>
     <string name="boot_dialog_mesage_color_title">Farbe der Nachricht</string>
